--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "lib/pmem-rocksdb"]
 	path = lib/pmem-rocksdb
-	url = https://github.com.cnpmjs.org/GlitterIsMe/pmem-rocksdb.git
+	url = https://github.com/GlitterIsMe/pmem-rocksdb.git
 	branch = developing
