--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,11 @@
 [submodule "lib/viper"]
 	path = lib/viper
 	url = https://github.com/GlitterIsMe/viper.git
+[submodule "lib/hikv"]
+	path = lib/hikv
+	url = https://github.com/GlitterIsMe/open_hikv.git
+	branch = lib
+[submodule "lib/metakv"]
+	path = lib/metakv
+	url = https://github.com/HUSTERGS/MetaKV.git
+	branch = zyw
