Using new metakv

--- a/.gitmodules
+++ b/.gitmodules
@@ -21,3 +21,7 @@
 	path = lib/metakv
 	url = https://github.com/HUSTERGS/MetaKV.git
 	branch = zyw
+[submodule "lib/new-metakv"]
+	path = lib/new-metakv
+	url = https://github.com/HUSTERGS/MetaKV.git
+	branch = zyw-new-layout
