--- a/.gitmodules
+++ b/.gitmodules
@@ -16,7 +16,7 @@
 [submodule "lib/hikv"]
 	path = lib/hikv
 	url = https://github.com/GlitterIsMe/open_hikv.git
-	branch = lib
+	branch = developing
 [submodule "lib/metakv"]
 	path = lib/metakv
 	url = https://github.com/HUSTERGS/MetaKV.git
