--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "lib/new-metakv"]
 	path = lib/new-metakv
 	url = git@github.com:HUSTERGS/MetaKV.git
+[submodule "lib/HybridHash"]
+	path = lib/HybridHash
+	url = git@github.com:minxinhao/HybridHash.git
