--- a/.gitmodules
+++ b/.gitmodules
@@ -23,3 +23,6 @@
 [submodule "lib/HybridHash"]
 	path = lib/HybridHash
 	url = git@github.com:minxinhao/HybridHash.git
+[submodule "lib/metakv"]
+	path = lib/metakv
+	url = git@github.com:Junkrat77/metakv.git
