--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,21 @@
 cmake_minimum_required(VERSION 3.14)
+set(CMAKE_CXX_STANDARD 17)
+
 project(ycsb)
 
 include(FindThreads)
-find_package(PkgConfig REQUIRED)
-pkg_check_modules(TBB REQUIRED tbb)
+find_package(TBB REQUIRED)
 
 add_subdirectory(redis)
 
 #add_definitions(-DGENERATE_PREFIX_KEY)
+
+link_directories(lib/wiredtiger/build)
+
+add_executable(wiredtiger_test "")
+target_sources(wiredtiger_test PUBLIC "WiredTigerTester.cpp")
+target_include_directories(wiredtiger_test PUBLIC lib/wiredtiger/build/include)
+target_link_libraries(wiredtiger_test PUBLIC wiredtiger)
 
 add_executable(ycsb "")
 target_sources(ycsb PUBLIC
@@ -26,6 +34,8 @@ target_sources(ycsb PUBLIC
         "core/uniform_generator.h"
         "core/utils.h"
         "core/zipfian_generator.h"
+        "core/histogram.cc"
+        "core/histogram.h"
 
         "db/basic_db.h"
         "db/db_factory.cc"
@@ -37,6 +47,9 @@ target_sources(ycsb PUBLIC
         "db/redis_db.h"
         "db/tbb_rand_db.h"
         "db/tbb_scan_db.h"
+        "db/wiredtiger_db.cc"
+        "db/wiredtiger_db.h"
+
 
         "lib/lock_stl_hashtable.h"
         "lib/mem_alloc.h"
@@ -49,5 +62,19 @@ target_sources(ycsb PUBLIC
         "ycsbc.cc"
         )
 
+
+# Generate wiredtiger.h include file.
+#configure_file(lib/wiredtiger/src/include/wiredtiger.in lib/wiredtiger/src/include/wiredtiger.h @ONLY)
+# Generate our wiredtiger_config.h include file.
+#configure_file(lib/wiredtiger/cmake/configs/wiredtiger_config.h.in lib/wiredtiger/src/config/wiredtiger_config.h @ONLY)
+
+
+## wiredtiger直接编译成shared
+## 默认编译路径为build
+## TODO，加一个script检查是否编译成功
+target_include_directories(ycsb PUBLIC lib/wiredtiger/build/include)
+target_link_libraries(ycsb PUBLIC wiredtiger)
+
+
 target_include_directories(ycsb PUBLIC .)
-target_link_libraries(ycsb ${CMAKE_THREAD_LIBS_INIT} ${TBB_LIBRARIES} hiredis)
+target_link_libraries(ycsb PUBLIC ${CMAKE_THREAD_LIBS_INIT} TBB::tbb hiredis)
